--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="description" content="Affortable and Professional web design">
     <meta name="Keyworlds" content="web design, affortable web design , professional web design">
     <meta name="author" content="AfrozackEnterprise">
-    <title>Acme Web Design | Welcome</title>
+    <title>My Web Design | Welcome</title>
     <link rel="stylesheet"href="./css/style.css">
   </head>
   <body>
     <header>
       <div class="container">
         <div id="branding">
-          <h1><span class="heighlight">Acme</span>Web Design</h1>
+          <h1><span class="heighlight">My</span>Web Design</h1>
         </div>
           <nav>
             <ul>
