final push of pages

--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Affortable and Professional web design">
     <meta name="Keyworlds" content="web design, affortable web design , professional web design">
     <meta name="author" content="AfrozackEnterprise">
-    <title>Acme Web Design | Services</title>
+    <title>My Web Design | Services</title>
     <link rel="stylesheet"href="./css/style.css">
 
   </head>
@@ -14,7 +14,7 @@
     <header>
       <div class="container">
         <div id="branding">
-          <h1><span class="heighlight">Acme</span>Web Design</h1>
+          <h1><span class="heighlight">My</span>Web Design</h1>
         </div>
           <nav>
             <ul>
