final push of pages with copyright

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </section>
 
 <footer>
-<p>Acme Web Design, Copyright &copy; 2017</p>
+<p>Sunjida Web Design, Copyright &copy; 2017</p>
 </footer>
   </body>
 </html>
