--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
           <h1><span class="heighlight">My</span>Web Design</h1>
         </div>
           <nav>
-            <ul>
+            <ul>s
               <li><a href="index.html">Home</a></li>
               <li ><a href="about.html">About</a></li>
               <li class="current"><a href="services.html">Services</a></li>
@@ -85,7 +85,7 @@
   </section>
 <script src="js/main.js"></script>
 <footer>
-<p>Acme Web Design, Copyright &copy; 2017</p>
+<p>Sunjida Web Design, Copyright &copy; 2017</p>
 </footer>
 
   </body>
