--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
   </section>
 
 <footer>
-<p>Acme Web Design, Copyright &copy; 2017</p>
+<p>Sunjida Web Design, Copyright &copy; 2017</p>
 </footer>
   </body>
 </html>
